Add link to booking page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1 class="intro-main">Tu camino hacia una vida más saludable empieza hoy</h1>
             <p class="intro-second">Descubre cómo la nutrición personalizada puede ayudarte a alcanzar tus objetivos de salud y bienestar</p>
             <p class="intro-small">Ya seas deportista, estudiante o ama de casa, te ayudaré a crear un plan de alimentación que se adapte a tu estilo de vida y necesidades. Agenda tu <b>cita gratuita</b> y comienza tu transformación.</p>
-            <div class="booking-button">Agenda tu cita</div>
+            <div class="booking-button"><a href="./pages/agendar_cita.html">Agenda tu cita</a></div>
         </div>
         <div class="intro-image">
             <img src="./images/inicio-cta.jpg" alt="Comiendo saludable">
