Style contact page Add a contact form and the clinic details. Initially it was planned the contact form to include a booking option using google calendar scheduling API, however the client decided to schedule appointments directly with the patients. So we opted to only use a web form submission service to get the patient details to the client business account. The service provider is yet to be determined.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/fonts.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/inicio.css">
 </head>
 <body>
     <div class="header-container">
@@ -21,20 +22,17 @@
             <div class="menu-item">Contacto</div>
         </div>
     </div>
-
     <div class="introduction-container">
         <div class="introduction">
-            <!-- <p class="cta-small">Experto en Nutrición</p> -->
-            <h1 class="intro-main">Tu camino hacia una vida más saludable empieza hoy</h1>
-            <p class="intro-second">Descubre cómo la nutrición personalizada puede ayudarte a alcanzar tus objetivos de salud y bienestar</p>
-            <p class="intro-small">Ya seas deportista, estudiante o ama de casa, te ayudaré a crear un plan de alimentación que se adapte a tu estilo de vida y necesidades. Agenda tu <b>cita gratuita</b> y comienza tu transformación.</p>
-            <div class="booking-button"><a href="./pages/agendar_cita.html">Agenda tu cita</a></div>
+            <h1 class="main-text">Tu camino hacia una vida más saludable empieza hoy</h1>
+            <p class="secondary-text">Descubre cómo la nutrición personalizada puede ayudarte a alcanzar tus objetivos de salud y bienestar</p>
+            <p class="small-italic">Ya seas deportista, estudiante o ama de casa, te ayudaré a crear un plan de alimentación que se adapte a tu estilo de vida y necesidades. Agenda tu <b>cita gratuita</b> y comienza tu transformación.</p>
+            <div class="booking-button"><a class="booking-link" href="./pages/contacto.html">Agenda tu cita</a></div>
         </div>
         <div class="intro-image">
             <img src="./images/inicio-cta.jpg" alt="Comiendo saludable">
         </div>
     </div>
-
     <div class="value-proposition">
         <h2 class="value-title">Tu salud y bienestar empiezan con una alimentación personalizada</h2>
         <p class="value-text">
