--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/base.css">
     <link rel="stylesheet" href="./styles/inicio.css">
+    <script src="./scripts/base.js" defer></script>
 </head>
 <body>
     <div class="header-container">
