Add dropdown menu to show services
I use a 'mouseover' event listener to show a dropdown menu. I decided
to keep the dropdown menu and the element 'servicios' that triggers the
event separated in order to maintain the existing document flow. To
hide the dropdown menu, I added a 'mouseout' event to the dropdown
itself. This cause an undesired behavior, if accidentally the user
hovered over 'servicios' then the dropdown would stay visible, if the
mouse never hovered over it.

To fix this, I used a wrapper that slightly overlaps with 'servicios'.
Then I added both the 'mouseover' and 'mouseout' events to both,
'servicios' and the wrapper. This allows the dropdown to stay visible
when the mouse crosses from 'servicios' and prevents it to remain
visible if the user accidentally hovers over the 'servicios' tab.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,20 @@
         </div>
         <div class="menu">
             <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios</div>
+            <div class="menu-item">Servicios <span class="arrow">&#x25be;</span></div>
             <div class="menu-item">Precios</div>
-            <div class="menu-item">Testimonios</div>
+            <div class="menu-item">Dr. Libreros</div>
             <div class="menu-item">Contacto</div>
+        </div>
+    </div>
+    <div class="dropdown-container">      
+        <div class="dropdown-menu">
+            <p class="service">Nutrición clínica</p>
+            <p class="service">Pérdida y control de peso</p>
+            <p class="service">Nutrición deportiva</p>
+            <p class="service">Planes de entrenamiento</p>
+            <p class="service">Diabetes</p>
+            <p class="service">Cineantropometría</p>
         </div>
     </div>
     <div class="introduction-container">
@@ -112,7 +122,7 @@
 
     <div class="cta-container">
         <h2 class="cta-title">¡Reserva tu consulta gratuita hoy!</h2>
-        <div class="booking-button">Agenda tu cita</div> 
+        <div class="booking-button"><a class="booking-link" href="./pages/contacto.html">Agenda tu cita</a></div> 
     </div>
 
     <div class="footer-container">
@@ -127,18 +137,5 @@
             <img class="icon" src="./images/linkedin.svg">
         </div>
     </div>
-
-    <!-- <div class="info-container">
-        <div class="info">
-            <p class="info-small">Especialista en nutricion del deporte</p>
-            <h1 class="info-main">Plan de alimentación especialmente diseñado para ti</h1>
-            <p class="info-accent">
-                ¡Olvídate de las dietas universales! Nuestro enfoque revolucionario de la nutrición entiende que tu cuerpo y estilo de vida son completamente únicos. Abandonamos los planes
-                genéricos y, en su lugar, diseñamos una ruta dietética específicamente adaptada a tus necesidades.
-            </p>
-        </div>
-    </div> -->
-    
-
 </body>
 </html>
