--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,6 +77,7 @@
                                 <select name="service" id="service" required>
                                     <option value="0" selected disabled hidden>Elige una opcion</option>
                                     <option value="nutricion-clinica">Nutrición clínica</option>
+                                    <option value="control-de-peso">Pérdida y control de peso</option>
                                     <option value="nutricion-deportiva">Nutrición deportiva</option>
                                     <option value="planes-entrenamiento">Planes de entrenamiento</option>
                                     <option value="educacion-diabetes">Diabetes</option>
@@ -106,9 +107,5 @@
             <img class="icon" src="../images/linkedin.svg">
         </div>
     </div>
-    <!-- Calendly inline widget begin -->
-    <!-- <div class="calendly-inline-widget" data-url="https://calendly.com/cesparzajp/evaluacio-inicial?hide_event_type_details=1&text_color=183861&primary_color=0daa70" style="min-width:320px;height:700px;"></div>
-    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script> -->
-    <!-- Calendly inline widget end -->
 </body>
 </html>
