--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header-container">
         <div class="header">
             <img class="logo" src="./images/logo3.svg" alt="Libreros nutricion">
-            <div class="title">LIBREROS NUTRICIÓN</div>
+            <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <div class="menu">
             <div class="menu-item">Inicio</div>
@@ -37,7 +37,7 @@
         <div class="introduction">
             <h1 class="main-text">Tu camino hacia una vida más saludable empieza hoy</h1>
             <p class="secondary-text">Descubre cómo la nutrición personalizada puede ayudarte a alcanzar tus objetivos de salud y bienestar</p>
-            <p class="small-italic">Ya seas deportista, estudiante o ama de casa, te ayudaré a crear un plan de alimentación que se adapte a tu estilo de vida y necesidades. Agenda tu <b>cita gratuita</b> y comienza tu transformación.</p>
+            <p class="small-italic">Ya seas deportista, estudiante o ama de casa, te ayudaré a crear un plan de alimentación que se adapte a tu estilo de vida y necesidades. <b>Agenda tu cita ahora</b> y comienza tu transformación.</p>
             <div class="booking-button"><a class="booking-link" href="./pages/contacto.html">Agenda tu cita</a></div>
         </div>
         <div class="intro-image">
@@ -45,14 +45,14 @@
         </div>
     </div>
     <div class="value-proposition">
-        <h2 class="value-title">Tu salud y bienestar empiezan con una alimentación personalizada</h2>
+        <h2 class="value-title">Planes únicos para cada persona: Consideramos tus necesidades, preferencias y estilo de vida para crear un plan a tu medida.</h2>
         <p class="value-text">
             Nuestros planes de alimentación están diseñados para ayudarte a:
             <ul>
-                <li>Perder peso y mantenerte en forma</li>
-                <li>Mejorar tu rendimiento deportivo</li>
-                <li>Controlar enfermedades crónicas</li>
-                <li>Aumentar tu energía y vitalidad</li>
+                <li><b>Alcanzar tu composición corporal ideal</b>: gana músculo y define tu figura</li>
+                <li><b>Mejorar tu rendimiento físico</b>: aumenta tu energía y vitalidad</li>
+                <li><b>Tomar mejores decisiones de alimentación</b>: preven o controla enfermedades crónicas</li>
+                <li><b>¡Ser tu mejor versión!</b></li>
             </ul>
         </p>
     </div>
@@ -65,14 +65,14 @@
                     <img src="./images/cita.jpg" alt="Consulta"> 
                 </div>
                 <div class="step-text">
-                    <h3 class="step-title">1. Agendamos una consulta gratuita</h3>
+                    <h3 class="step-title">1. Agendamos tu consulta de valoración</h3>
                     <p class="step-text">En esta sesión evaluaremos tus necesidades y objetivos.</p>
                 </div>
             </div>
             <div class="step">
                 <div class="step-text">
                     <h3 class="step-title">2. Evaluamos tu estado actual</h3>
-                    <p class="step-text">Realizaremos un análisis de tu salud y hábitos actuales.</p>
+                    <p class="step-text">Realizaremos un análisis de tu salud, composición corporal y hábitos actuales.</p>
                 </div>
                 <div class="step-image"><img src="./images/evaluacion2.jpg" alt="Evaluación"></div> 
             </div>
@@ -121,14 +121,14 @@
     </div>
 
     <div class="cta-container">
-        <h2 class="cta-title">¡Reserva tu consulta gratuita hoy!</h2>
+        <h2 class="cta-title">¡Reserva tu consulta hoy!</h2>
         <div class="booking-button"><a class="booking-link" href="./pages/contacto.html">Agenda tu cita</a></div> 
     </div>
 
     <div class="footer-container">
         <div class="footer">
             <img class="logo" src="./images/logo3.svg" alt="Libreros nutricion">
-            <div class="title">LIBREROS NUTRICIÓN</div>
+            <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <p>© 2024 EL Diseño</p>
         <div class="sns">
