--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../styles/fonts.css">
     <script src="../scripts/contacto.js" defer></script>
     <script src="../scripts/base.js" defer></script>
-    <!-- <script src="https://web3forms.com/client/script.js" async defer></script> -->
+    <script src="https://web3forms.com/client/script.js" async defer></script>
 </head>
 <body>
     <div class="header-container">
@@ -97,7 +97,7 @@
                         </div>
                     </fieldset>
                 </div>
-                <!-- <div class="h-captcha" data-lang="es" data-captcha="true"></div> -->
+                <div class="h-captcha" data-lang="es" data-captcha="true"></div>
                 <div id="send-container">
                     <button class="submit-button" type="submit" id="submit">Enviar</button>
                 </div>
