--- a/pages/confirmacion.html
+++ b/pages/confirmacion.html
@@ -12,15 +12,25 @@
 <body>
     <div class="header-container">
         <div class="header">
-            <img class="logo" src="../images/logo3.svg" alt="Libreros nutricion">
-            <div class="title">LIBREROS NUTRICIÓN</div>
+            <img class="logo" src="./images/logo3.svg" alt="Libreros nutricion">
+            <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <div class="menu">
             <div class="menu-item">Inicio</div>
-            <div class="menu-item">Servicios</div>
+            <div class="menu-item">Servicios <span class="arrow">&#x25be;</span></div>
             <div class="menu-item">Precios</div>
-            <div class="menu-item">Testimonios</div>
+            <div class="menu-item">Dr. Libreros</div>
             <div class="menu-item">Contacto</div>
+        </div>
+    </div>
+    <div class="dropdown-container">      
+        <div class="dropdown-menu">
+            <p class="service">Nutrición clínica</p>
+            <p class="service">Pérdida y control de peso</p>
+            <p class="service">Nutrición deportiva</p>
+            <p class="service">Planes de entrenamiento</p>
+            <p class="service">Diabetes</p>
+            <p class="service">Cineantropometría</p>
         </div>
     </div>
     
