--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,7 @@
     <div class="header-container">
         <div class="header">
             <img class="logo" src="../images/logo3.svg" alt="Libreros nutricion">
-            <div class="title">LIBREROS NUTRICIÓN</div>
+            <div class="title">ALFONSO LIBREROS NUTRIOLOGO</div>
         </div>
         <div class="menu">
             <div class="menu-item">Inicio</div>
