Reshape services images and add credits

--- a/index.html
+++ b/index.html
@@ -119,10 +119,11 @@
             </div>
         </div>
     </div>
-
     <div class="cta-container">
-        <h2 class="cta-title">¡Reserva tu consulta hoy!</h2>
-        <div class="booking-button"><a class="booking-link" href="./pages/contacto.html">Agenda tu cita</a></div> 
+        <div class="cta">
+            <h2 class="cta-title">¡Reserva tu consulta hoy!</h2>
+            <div class="booking-button"><a class="booking-link" href="./pages/contacto.html">Agenda tu cita</a></div>   
+        </div>
     </div>
 
     <div class="footer-container">
