--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -37,21 +37,21 @@
         <div class="introduction">
             <h1 class="main-text">Descubre el poder de una alimentación personalizada y alcanza tus objetivos de salud.</h1>
             <p class="secondary-text">
-                ¡Explora nuestros servicios y comienza tu camino hacia una vida más saludable!
+                Trabajamos contigo para crear planes nutricionales hechos a tu medida y lograr resultados reales.
             </p>
-            <p class="small-italic">Trabajamos contigo para crear planes nutricionales hechos a tu medida y lograr resultados reales.</p>
+            <!-- <p class="small-italic"></p> -->
         </div>
         <div class="intro-image">
-            <img src="../images/mariana-medvedeva-usfIE5Yc7PY-unsplash.jpg" alt="Ensaladas">
+            <img src="../images/mariana-medvedeva-usfIE5Yc7PY-unsplash.jpg" alt="Ensaladas" title="Photo by Mariana Medvedeva on Unsplash">
         </div>
     </div>
 
     <div class="services-container">
-        <h2 class="services-title">¿Cómo funciona?</h2>
+        <h2 class="services-title">Explora nuestros servicios</h2>
         <div class="services">
             <div class="service">
                 <div class="service-image">
-                    <img src="../images/services/pexels-beyzahzah-89810429-15319037.jpg" alt="Nutrición clínica"> 
+                    <img src="../images/services/pexels-beyzahzah-89810429-15319037.jpg" alt="Nutrición clínica" title="Photo by beyzahzah on Pexels"> 
                 </div>
                 <div class="service-text">
                     <h3 class="service-title">Nutrición Clínica</h3>
@@ -69,10 +69,10 @@
                         Mejora tu salud, autoestima y calidad de vida con un plan nutricional diseñado para ti.
                     </p>
                 </div>
-                <div class="service-image"><img src="../images/services/pexels-shvets-production-6975474.jpg" alt="Control de peso"></div> 
+                <div class="service-image"><img src="../images/services/pexels-shvets-production-6975474.jpg" alt="Control de peso" title="Photo by SHVETS production on Pexels"></div> 
             </div>
             <div class="service">
-                <div class="service-image"><img src="../images/services/pexels-andres-ayrton-6551131.jpg" alt="Nutrición deportiva"></div>
+                <div class="service-image"><img src="../images/services/derick-mckinney-__QqvTI5Edc-unsplash.jpg" alt="Nutrición deportiva" title="Photo by Derick McKinney on Unsplash"></div>
                 <div class="service-text">
                     <h3 class="service-title">Nutrición deportiva</h3>
                     <p class="service-body">
@@ -89,10 +89,10 @@
                         Te guiamos, motivamos y brindamos herramientas para alcanzar tus objetivos físicos y potenciar tu bienestar.
                     </p>
                 </div>
-                <div class="service-image"><img src="../images/services/pexels-victorfreitas-2261482.jpg" alt="Soporte"></div>
+                <div class="service-image"><img src="../images/services/pexels-victorfreitas-2261482.jpg" alt="Planes de entrenamiento" title="Photo by Victor Freitas on Pexels"></div>
             </div>
             <div class="service">
-                <div class="service-image"><img src="../images/services/pexels-wdnet-1001897.jpg" alt="Diabetes"></div> 
+                <div class="service-image"><img src="../images/services/pexels-wdnet-1001897.jpg" alt="Diabetes" title="Photo by PhotoMIX Company on Pexels"></div> 
                 <div class="service-text">
                     <h3 class="service-title">Diabetes</h3>
                     <p class="service-body">
@@ -115,8 +115,10 @@
     </div>
 
     <div class="cta-container">
-        <h2 class="cta-title">¡Toma el control de tu salud hoy!</h2>
-        <div class="booking-button"><a class="booking-link" href="../pages/contacto.html">Agenda tu cita</a></div> 
+        <div class="cta">
+            <h2 class="cta-title">¡Toma el control de tu salud hoy!</h2>
+            <div class="booking-button"><a class="booking-link" href="../pages/contacto.html">Agenda tu cita</a></div>
+        </div>
     </div>
 
     <div class="footer-container">
