Add link buttons to each service page

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -59,6 +59,9 @@
                         Logra tus objetivos de peso, controla enfermedades crónicas y mejora tu bienestar general con soluciones nutricionales diseñadas solo para ti.
                         Trabajamos contigo para crear un plan de alimentación efectivo y guiarte hacia el éxito en tus metas de salud.
                     </p>
+                    <div class="service-learn-more">
+                        ¡Descubre todos los beneficios!
+                    </div>
                 </div>
             </div>
             <div class="service">
@@ -68,6 +71,9 @@
                         Te guiamos a lograr tus objetivos de peso con herramientas personalizadas y apoyo continuo.
                         Mejora tu salud, autoestima y calidad de vida con un plan nutricional diseñado para ti.
                     </p>
+                    <div class="service-learn-more">
+                        ¡Descubre todos los beneficios!
+                    </div>
                 </div>
                 <div class="service-image"><img src="../images/services/pexels-shvets-production-6975474.jpg" alt="Control de peso" title="Photo by SHVETS production on Pexels"></div> 
             </div>
@@ -79,6 +85,9 @@
                         Combina tu régimen de ejercicio con una nutrición estratégica para elevar tu rendimiento a otro nivel.
                         Mejora tu recuperación, potencia tu desempeño y supera a la competencia con una nutrición estratégica.
                     </p>
+                    <div class="service-learn-more">
+                        ¡Descubre todos los beneficios!
+                    </div>
                 </div>
             </div>
             <div class="service">
@@ -88,6 +97,9 @@
                         Mejora tu fuerza, resistencia y condición física con un plan diseñado para tu éxito.
                         Te guiamos, motivamos y brindamos herramientas para alcanzar tus objetivos físicos y potenciar tu bienestar.
                     </p>
+                    <div class="service-learn-more">
+                        ¡Descubre todos los beneficios!
+                    </div>
                 </div>
                 <div class="service-image"><img src="../images/services/pexels-victorfreitas-2261482.jpg" alt="Planes de entrenamiento" title="Photo by Victor Freitas on Pexels"></div>
             </div>
@@ -99,6 +111,9 @@
                         Descubre cómo la alimentación y el estilo de vida pueden ayudarte a controlar la diabetes y mejorar tu bienestar.
                         Recibe orientación individualizada para aprender a manejar tus niveles de azúcar y prevenir complicaciones.
                     </p>
+                    <div class="service-learn-more">
+                        ¡Descubre todos los beneficios!
+                    </div>
                 </div>
             </div>
             <div class="service">
@@ -108,6 +123,9 @@
                         Obtén información precisa sobre tu composición corporal para optimizar tus resultados de salud y fitness.
                         Observa cómo tu cuerpo cambia con el tiempo y el esfuerzo a través de mediciones precisas de composición corporal.
                     </p>
+                    <div class="service-learn-more">
+                        ¡Descubre todos los beneficios!
+                    </div>
                 </div>
                 <div class="service-image"><img src="../images/services/medicion-grasa-corporal.jpg" alt="Cineantropometría"></div>
             </div>
