Add credits to inicio images

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="booking-button"><a class="booking-link" href="./pages/contacto.html">Agenda tu cita</a></div>
         </div>
         <div class="intro-image">
-            <img src="./images/inicio-cta.jpg" alt="Comiendo saludable">
+            <img src="./images/inicio-cta.jpg" alt="Comiendo saludable" title="Photo by Dushawn Jovic on Unsplash">
         </div>
     </div>
     <div class="value-proposition">
@@ -62,33 +62,46 @@
         <div class="steps">
             <div class="step">
                 <div class="step-image">
-                    <img src="./images/cita.jpg" alt="Consulta"> 
+                    <img src="./images/cita.jpg" alt="Consulta" title="Photo by the National Cancer Institute on Unsplash"> 
                 </div>
                 <div class="step-text">
                     <h3 class="step-title">1. Agendamos tu consulta de valoración</h3>
-                    <p class="step-text">En esta sesión evaluaremos tus necesidades y objetivos.</p>
+                    <p class="step-text">
+                        Juntos, exploraremos tu estilo de vida actual, hábitos alimenticios, historial médico y cualquier otra información relevante para desarrollar una
+                        estrategia personalizada que te ayude a alcanzar tus metas de salud y bienestar.
+                    </p>
                 </div>
             </div>
             <div class="step">
                 <div class="step-text">
                     <h3 class="step-title">2. Evaluamos tu estado actual</h3>
-                    <p class="step-text">Realizaremos un análisis de tu salud, composición corporal y hábitos actuales.</p>
+                    <p class="step-text">
+                        Realizaremos un análisis exhaustivo de tu salud, considerando factores como tu peso, altura, índice de masa corporal, presión arterial, niveles
+                        de glucosa y cualquier otra condición médica relevante.
+                    </p>
                 </div>
-                <div class="step-image"><img src="./images/evaluacion2.jpg" alt="Evaluación"></div> 
+                <div class="step-image"><img src="./images/evaluacion2.jpg" alt="Evaluación" title="Photo by Kenny Eliason on Unsplash"></div> 
             </div>
             <div class="step">
-                <div class="step-image"><img src="./images/dieta.jpg" alt="Plan"></div>
+                <div class="step-image"><img src="./images/dieta.jpg" alt="Plan" title="Photo by Brooke Lark on Unsplash"></div>
                 <div class="step-text">
                     <h3 class="step-title">3. Diseñamos un plan personalizado</h3>
-                    <p class="step-text">Crearemos un plan de alimentación adaptado a tu estilo de vida y preferencias.</p>
+                    <p class="step-text">
+                        Crearemos un plan de alimentación adaptado a tu estilo de vida, preferencias alimenticias y necesidades nutricionales específicas.
+                        Este plan incluirá recomendaciones personalizadas sobre qué comer, cuándo comer y en qué cantidades, considerando tus gustos y aversiones,
+                        tu horario laboral y tus actividades diarias.
+                    </p>
                 </div>
             </div>
             <div class="step">
                 <div class="step-text">
                     <h3 class="step-title">4. Te damos seguimiento y apoyo</h3>
-                    <p class="step-text">Te acompañamos durante todo el proceso para lograr tus metas.</p>
+                    <p class="step-text">
+                        Te acompañaremos durante todo el proceso, brindándote el apoyo y la motivación necesarios para alcanzar tus metas.
+                        Regularmente, realizaremos seguimientos para evaluar tu progreso, ajustar tu plan según sea necesario y abordar cualquier desafío que puedas enfrentar.
+                    </p>
                 </div>
-                <div class="step-image"><img src="./images/soporte.jpg" alt="Soporte"></div>
+                <div class="step-image"><img src="./images/soporte.jpg" alt="Soporte" title="Photo by the National Cancer Institute on Unsplash"></div>
             </div>
         </div>
     </div>
@@ -101,7 +114,7 @@
                 <img src="./images/angle-left.svg" alt="back">
             </div>
             <div class="testimonial active">
-                <div class="testimonial-image"><img src="./images/transformacion.jpg" alt="Foto de cliente"></div>
+                <div class="testimonial-image"><img src="./images/transformacion.jpg" alt="Foto de cliente" title="Photo by Sopan Shewale on Unsplash"></div>
                 <div class="testimonial-text">
                     <p class="testimonial-quote">"¡Perdí 10 kg en 3 meses gracias al plan del doctor Libreros! Estoy muy feliz con los resultados y me siento mucho mejor." </p>
                     <p class="testimonial-author">- Roberto García</p>
