Add sticky header using intersection observer

--- a/pages/precios.html
+++ b/pages/precios.html
@@ -36,14 +36,15 @@
     </div>
 
     <div class="precios-container">
-        <h1 class="precios-title">
+        <h1 class="secondary-text">
             Conoce nuestros precios y promociones
         </h1>
+        <div class="intersection-tracker"></div>
+        <div class="white-space"></div>
         <div class="pricing-grid">
-
-            <div class="header-cell"></div>
-            <div class="header-cell">Servicio</div>
-            <div class="header-cell">Precio</div>
+            <div class="header-cell"><div class="header-text"></div></div>
+            <div class="header-cell"><div class="header-text">Servicio</div></div>
+            <div class="header-cell"><div class="header-text">Precio</div></div>
 
             <div class="separator-container">
                 <div class="separator"></div>
@@ -130,38 +131,38 @@
                 <div class="separator"></div>
             </div>
 
-            <div class="row-label"><p>Promociones</p></div>
-
-            <div class="service-title">
-                Primera valoración
-            </div>
-
-
-            <div class="service-cell">Plan nutricional</div>
-            <div class="price-cell">450MXN</div>
-
-            <div class="service-cell">Plan de entrenamiento</div>
-            <div class="price-cell">200MXN</div>
-
-            <div class="service-cell">Plan integral</div>
-            <div class="price-cell">500MXN</div>
-
-            <div class="empty-cell">
-                
-            </div>
-
-            <div class="service-cell">Seguimientos</div>
-            <div class="price-cell">300MXN</div>
-
-            <div class="separator-container">
-                <div class="separator"></div>
-            </div>
-
             <div class="footnote" id="footnote1">
                 <sup>*</sup> Precio por persona
             </div>
             <div class="footnote" id="footnote2">
                 <sup>**</sup> Precio por persona. Grupos de 3 o mas que vivan juntos.
+            </div>
+        </div>
+        <div class="intersection-tracker"></div>
+
+        <div class="promociones-container">
+            <div class="promociones">
+                <div class="promociones-title">
+                    ¡Aprovecha nuestras promociones!
+                </div>
+                <div class="separator-container">
+                    <div class="separator"></div>
+                </div>
+                <ul class="promociones-text">
+                    <li>Ahorra 100MXN en tu próxima consulta por referir a un paciente.<sup><a href="#footnote3">*</a></sup></li>
+                    <li>Tu 4ta consulta de seguimiento es gratis.</li>
+                    <li>Pregunta por nuestras recompensas de constancia.</li>
+                    <li>
+                        Ofrecemos consideraciones especiales para personas de bajos recursos.
+                        Consúltanos para conocer más
+                    </li>
+                </ul>
+                <div class="separator-container">
+                    <div class="separator"></div>
+                </div>
+                <div class="footnote" id="footnote3">
+                    <sup>*</sup> Maximo descuento 100MXN.
+                </div>
             </div>
         </div>
     </div>
